--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^5.5.0",
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.5.0",
+    "react-scripts": "^5.0.1",
     "react-scroll": "^1.9.3"
   },
   "devDependencies": {
