--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
+    "aos": "^2.3.4",
     "emailjs-com": "^3.2.0",
-    "framer-motion": "^12.6.3",
+    "framer-motion": "^12.16.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
